--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <script src="js/script.js"></script>
       <link rel="stylesheet" href="css/style.css"/>
       
-      <form action="server.php" method="POST">
+      <form action="server.php" method="GET">
           <label for="text"></label>
           <input type="text" id="text">
           <input type="submit">
